[gd_scene load_steps=59 format=4 uid="uid://6nylmryatr4i"]

[ext_resource type="Script" uid="uid://xbig6ucwspom" path="res://player.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://cawkfitmfwcbl" path="res://assets/Hero Sprites/herochar_death_anim_strip_8.png" id="2_4d7sh"]
[ext_resource type="Texture2D" uid="uid://bkacep3ris5a5" path="res://assets/Hero Sprites/herochar_spritesheet(new).png" id="2_epypp"]
[ext_resource type="Texture2D" uid="uid://dfbt00babxk1y" path="res://assets/Hero Sprites/herochar_run_anim_strip_6.png" id="3_0hol4"]
[ext_resource type="PackedScene" uid="uid://cqppio4bpn3ak" path="res://background.tscn" id="4_q6r6c"]
[ext_resource type="Texture2D" uid="uid://ontkn15mca2w" path="res://tileset.png" id="6_d21ai"]
[ext_resource type="PackedScene" uid="uid://bky742od5l4o4" path="res://killzone.tscn" id="6_kdubu"]
[ext_resource type="PackedScene" uid="uid://hdqagp1r10iq" path="res://button.tscn" id="7_d21ai"]
[ext_resource type="Texture2D" uid="uid://n3nx3np48pv0" path="res://assets/More Tiles/tileset.png" id="8_nr8wp"]
[ext_resource type="FontFile" uid="uid://cx5pgu2jrh0lj" path="res://PixelIntv-OPxd.ttf" id="8_rj586"]
[ext_resource type="PackedScene" uid="uid://btfwshhv8pca0" path="res://resetPlayerAttribute.tscn" id="9_hqns4"]
[ext_resource type="Script" uid="uid://c0q6hq7v4ph4e" path="res://button2.gd" id="10_ir8iy"]
[ext_resource type="Script" uid="uid://rslmo8gwt1tg" path="res://button3.gd" id="12_x0ka3"]
[ext_resource type="Script" uid="uid://h6o86mcfg45v" path="res://button4.gd" id="14_nr8wp"]
[ext_resource type="Script" uid="uid://nwy52hiharvs" path="res://door.gd" id="15_1idop"]
[ext_resource type="Texture2D" uid="uid://bi0cv78qaglew" path="res://assets/Misc Sprites/strange_door_closed_anim_strip_10.png" id="15_ta5nu"]
[ext_resource type="Texture2D" uid="uid://b6vyplyuahrif" path="res://assets/Misc Sprites/door.png" id="16_flf07"]
[ext_resource type="PackedScene" uid="uid://bpppg0sd2ueqv" path="res://log.tscn" id="18_beq0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = ExtResource("2_4d7sh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2bti"]
atlas = ExtResource("2_4d7sh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta5nu"]
atlas = ExtResource("2_4d7sh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_flf07"]
atlas = ExtResource("2_4d7sh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k73cj"]
atlas = ExtResource("2_4d7sh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqkl"]
atlas = ExtResource("2_4d7sh")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4d3"]
atlas = ExtResource("2_4d7sh")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxoj"]
atlas = ExtResource("2_4d7sh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hol4"]
atlas = ExtResource("2_epypp")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6r6c"]
atlas = ExtResource("2_epypp")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdubu"]
atlas = ExtResource("2_epypp")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d21ai"]
atlas = ExtResource("2_epypp")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("3_0hol4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("3_0hol4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("3_0hol4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = ExtResource("3_0hol4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = ExtResource("3_0hol4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = ExtResource("3_0hol4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rj586"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2bti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta5nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k73cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxoj")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hol4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6r6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21ai")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4d7sh"]
radius = 3.0
height = 14.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kdubu"]
distance = 78.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqns4"]
size = Vector2(15, 9)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kdubu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d21ai"]
texture = ExtResource("6_d21ai")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359718, 1.97845, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.179859, 0.539577, -8, -8, -8, 8, 8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2bti"]
texture = ExtResource("8_nr8wp")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_rj586"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_kdubu")
sources/1 = SubResource("TileSetAtlasSource_d21ai")
sources/3 = SubResource("TileSetAtlasSource_d2bti")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0ka3"]
size = Vector2(20, 97)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei405"]
atlas = ExtResource("15_ta5nu")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8dv2"]
atlas = ExtResource("15_ta5nu")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhjh"]
atlas = ExtResource("15_ta5nu")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjha6"]
atlas = ExtResource("15_ta5nu")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt76g"]
atlas = ExtResource("15_ta5nu")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr6y"]
atlas = ExtResource("15_ta5nu")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxjc"]
atlas = ExtResource("15_ta5nu")
region = Rect2(96, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxd8"]
atlas = ExtResource("15_ta5nu")
region = Rect2(112, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7jv"]
atlas = ExtResource("15_ta5nu")
region = Rect2(128, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dk6"]
atlas = ExtResource("15_ta5nu")
region = Rect2(144, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryly"]
atlas = ExtResource("16_flf07")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_kq1c5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei405")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8dv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjha6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dk6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryly")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beq0j"]
size = Vector2(15, 20.25)

[node name="Game" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 8
position = Vector2(1, 0)
script = ExtResource("1_0e48y")
metadata/stop = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(1, -8)
sprite_frames = SubResource("SpriteFrames_rj586")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2, -7)
shape = SubResource("CapsuleShape2D_4d7sh")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_top = -420
limit_bottom = 120
limit_smoothed = true
position_smoothing_enabled = true

[node name="Node2D" parent="Player" instance=ExtResource("4_q6r6c")]
position = Vector2(2, 0)

[node name="Killzone" parent="." instance=ExtResource("6_kdubu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(1, 400)
shape = SubResource("WorldBoundaryShape2D_kdubu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
z_index = 100
position = Vector2(143.5, 43.5)
shape = SubResource("RectangleShape2D_hqns4")
debug_color = Color(0.68536, 0.495381, 0.205892, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-11, -564)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_kdubu")

[node name="Base Map" type="TileMapLayer" parent="."]
position = Vector2(34, 0)
tile_map_data = PackedByteArray("AAD9/wAAAQAAAAQAAAABAAAAAQABAAQAAAAAAAAAAQABAAQAAAD//wAAAQABAAQAAAD+/wAAAQABAAQAAAACAAAAAQABAAQAAAADAAAAAQACAAQAAAABAP//AQABAAAAAAAGAAMAAQAAAAQAAAAHAAMAAQABAAQAAAAIAAMAAQABAAQAAAAJAAMAAQABAAQAAAAKAAMAAQABAAQAAAALAAMAAQACAAQAAAAIAAEAAQAIAAIAAAAJAAEAAQAJAAIAAAAIAAIAAQAIAAMAAAAJAAIAAQAJAAMAAAANAAAAAQAAAAQAAAAOAAAAAQACAAQAAAAQAP3/AQAAAAQAAAARAP3/AQACAAQAAAAUAP//AQAAAAQAAAAVAP//AQABAAQAAAAWAP//AQABAAQAAAAXAP//AQABAAQAAAAYAP//AQABAAQAAAAZAP//AQABAAQAAAAaAP//AQACAAQAAAAYAP7/AQACAAAAAAAZAP7/AQACAAAAAAAVAP7/AQAAAAAAAAAHAAIAAQANAAAAAAAGAAIAAQAMAAAAAAAdAPD/AQAAAAQAAAAeAPD/AQABAAQAAAAfAPD/AQABAAQAAAAgAPD/AQABAAQAAAAhAPD/AQACAAQAAAAdAO//AQAGAAQAAAAdAO7/AQAGAAQAAAAdAO3/AQAGAAMAAAAdAOz/AQAGAAIAAAAdAOv/AQAGAAQAAAAdAOr/AQAGAAIAAAAdAOn/AQAGAAEAAAAlAPP/AQAAAAQAAAAmAPP/AQABAAQAAAAnAPP/AQABAAQAAAAoAPP/AQABAAQAAAApAPP/AQABAAQAAAAqAPP/AQABAAQAAAArAPP/AQABAAQAAAAsAPP/AQACAAQAAAAvAPf/AQAAAAQAAAAwAPf/AQABAAQAAAAxAPf/AQACAAQAAAAxAPb/AQABAAAAAAApAPL/AQAEAAAAAAA3AP3/AQAAAAQAAAA4AP3/AQABAAQAAAA5AP3/AQABAAQAAAA6AP3/AQABAAQAAAA7AP3/AQABAAQAAAA8AP3/AQACAAQAAAA7APb/AQACAAQAADA8APb/AQABAAQAADA9APb/AQABAAQAADA+APb/AQABAAQAADA/APb/AQABAAQAADBAAPb/AQABAAQAADBBAPb/AQAAAAQAADA/APf/AQABAAAAADBEAPb/AQACAAQAADBFAPb/AQABAAQAADBGAPb/AQABAAQAADBHAPb/AQABAAQAADBIAPb/AQAAAAQAADBKAPn/AQACAAQAADBLAPn/AQABAAQAADBMAPn/AQABAAQAADBNAPn/AQABAAQAADBOAPn/AQABAAQAADBPAPn/AQAAAAQAADBOAPr/AQABAAAAADBPAPD/AQACAAQAADBQAPD/AQABAAQAADBRAPD/AQABAAQAADBSAPD/AQABAAQAADBTAPD/AQABAAQAADBUAPD/AQABAAQAADBVAPD/AQABAAQAADBWAPD/AQABAAQAADBXAPD/AQABAAQAADBYAPD/AQABAAQAADBZAPD/AQABAAQAADBaAPD/AQABAAQAADBbAPD/AQABAAQAADBcAPD/AQABAAQAADBdAPD/AQABAAQAADBeAPD/AQABAAQAADBfAPD/AQABAAQAADBgAPD/AQABAAQAADBhAPD/AQABAAQAADBiAPD/AQABAAQAADBjAPD/AQABAAQAADBkAPD/AQABAAQAADBlAPD/AQABAAQAADBmAPD/AQABAAQAADBnAPD/AQABAAQAADBoAPD/AQABAAQAADBpAPD/AQAAAAQAADBfAPH/AQAIAAMAADBeAPH/AQAJAAMAADBeAPL/AQAJAAIAADBfAPL/AQAIAAIAADBaAPH/AQAEAAAAADBRAPH/AQAAAAAAADBSAPH/AQACAAAAADBTAPH/AQAAAAAAADBUAPH/AQAAAAAAADBVAPH/AQACAAAAADBWAPH/AQAAAAAAADBcAPH/AQACAAAAADBlAPH/AQACAAAAADBjAPH/AQAEAAAAADBoAPH/AQAEAAAAADBgAPH/AQABAAAAADBuAPD/AQAAAAQAADBtAPD/AQACAAQAADBzAPD/AQAAAAQAADByAPD/AQABAAQAADBxAPD/AQACAAQAADBwAP7/AQADAAUAAABxAP7/AQAEAAUAAAByAP7/AQAEAAUAAABzAP7/AQAEAAUAAAB0AP7/AQAEAAUAAAB1AP7/AQAEAAUAAAB2AP7/AQAEAAUAAAB3AP7/AQAEAAUAAAB4AP7/AQAEAAUAAAB5AP7/AQAEAAUAAAB6AP7/AQAEAAUAAAB7AP7/AQAEAAUAAAB8AP7/AQAEAAUAAAB9AP7/AQAEAAUAAAB+AP7/AQAEAAUAAAB/AP7/AQAEAAUAAACAAP7/AQAEAAUAAACBAP7/AQAEAAUAAACCAP7/AQAFAAUAAAA=")
tile_set = SubResource("TileSet_rj586")

[node name="Button" parent="." instance=ExtResource("7_d21ai")]
z_index = 10
position = Vector2(208, 46)
metadata/powerup_type = false
metadata/Activated = false

[node name="beginningText2" type="RichTextLabel" parent="."]
visible = false
offset_left = 231.0
offset_top = 25.0
offset_right = 320.0
offset_bottom = 97.0
theme_override_fonts/normal_font = ExtResource("8_rj586")
theme_override_font_sizes/normal_font_size = 10
text = "yeah... maybe don't press that one"
fit_content = true

[node name="beginningText" type="RichTextLabel" parent="."]
offset_left = -132.0
offset_top = -58.0
offset_right = -15.0
offset_bottom = 57.0
theme_override_fonts/normal_font = ExtResource("8_rj586")
text = "Click buttons, get powerups.

Fall off and welp-
"
fit_content = true

[node name="Spike" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="Button2" parent="." instance=ExtResource("7_d21ai")]
z_index = 10
position = Vector2(451, -18)
script = ExtResource("10_ir8iy")
metadata/powerup_type = false
metadata/Activated = false

[node name="Area2D" parent="." instance=ExtResource("9_hqns4")]
position = Vector2(2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(507, -305.5)
shape = SubResource("RectangleShape2D_x0ka3")

[node name="infoText" type="RichTextLabel" parent="."]
visible = false
offset_left = 471.0
offset_top = -42.0
offset_right = 588.0
offset_bottom = 91.0
theme_override_fonts/normal_font = ExtResource("8_rj586")
text = "Go up!"
fit_content = true

[node name="infoText2" type="RichTextLabel" parent="."]
offset_left = 511.0
offset_top = -290.0
offset_right = 683.0
offset_bottom = -157.0
theme_override_fonts/normal_font = ExtResource("8_rj586")
theme_override_font_sizes/normal_font_size = 10
text = "Vines fix you"
fit_content = true

[node name="Button3" parent="." instance=ExtResource("7_d21ai")]
z_index = 10
position = Vector2(994, -50)
script = ExtResource("12_x0ka3")
metadata/powerup_type = false
metadata/Activated = false

[node name="Button4" parent="." instance=ExtResource("7_d21ai")]
z_index = 10
position = Vector2(1872, -238)
rotation = 3.14159
script = ExtResource("14_nr8wp")
metadata/powerup_type = false
metadata/Activated = false

[node name="infoText3" type="RichTextLabel" parent="."]
offset_left = 1827.0
offset_top = -75.0
offset_right = 1999.0
offset_bottom = 58.0
theme_override_fonts/normal_font = ExtResource("8_rj586")
theme_override_font_sizes/normal_font_size = 10
text = "You did it! You got the basics, now time for the next level."
fit_content = true

[node name="Door" type="Area2D" parent="."]
script = ExtResource("15_1idop")

[node name="doorSprite" type="AnimatedSprite2D" parent="Door"]
position = Vector2(2094, -44)
sprite_frames = SubResource("SpriteFrames_kq1c5")
animation = &"new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(2094.5, -41.875)
shape = SubResource("RectangleShape2D_beq0j")

[node name="Log" parent="." instance=ExtResource("18_beq0j")]

[connection signal="animation_changed" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_changed"]
[connection signal="body_exited" from="Killzone" to="Player" method="_on_killzone_body_exited"]
[connection signal="body_exited" from="Killzone" to="Killzone" method="_on_body_exited"]
[connection signal="body_exited" from="Button" to="Button" method="_on_body_exited"]
[connection signal="body_exited" from="Button2" to="Player" method="_on_button_2_body_exited"]
[connection signal="body_exited" from="Button2" to="Button2" method="_on_body_exited"]
[connection signal="body_exited" from="Button3" to="Player" method="_on_button_2_body_exited"]
[connection signal="body_exited" from="Button3" to="Button3" method="_on_body_exited"]
[connection signal="body_exited" from="Button4" to="Player" method="_on_button_2_body_exited"]
[connection signal="body_exited" from="Button4" to="Button4" method="_on_body_exited"]
[connection signal="body_entered" from="Door" to="Door" method="_on_body_entered"]
